[gd_scene load_steps=7 format=3 uid="uid://dfw47cfjkhxvo"]

[ext_resource type="Script" path="res://Scripts/Game8/game8.gd" id="1_8yb7f"]
[ext_resource type="Texture2D" uid="uid://dekpgakicdk8s" path="res://Assets/Sprites/Game8/tie_fox_title.png" id="2_qwjca"]
[ext_resource type="Texture2D" uid="uid://brviet0ciewry" path="res://Assets/Sprites/Game8/button.png" id="3_rbm2p"]
[ext_resource type="Texture2D" uid="uid://cy3y0crcuda3s" path="res://Assets/Sprites/Game8/button_hover.png" id="4_dri2l"]
[ext_resource type="FontFile" uid="uid://berfaonrb5yns" path="res://Assets/Starjedi.ttf" id="5_wti6s"]
[ext_resource type="AudioStream" uid="uid://k5dblwmevlfh" path="res://Assets/Sounds/Game8/music.mp3" id="6_fk3a5"]

[node name="Game8" type="Node"]
script = ExtResource("1_8yb7f")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qwjca")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.5
offset_top = -170.0
offset_right = 104.5
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="NewGame" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_rbm2p")
texture_pressed = ExtResource("4_dri2l")
texture_hover = ExtResource("4_dri2l")

[node name="Label" type="Label" parent="UI/VBoxContainer/NewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_wti6s")
theme_override_font_sizes/font_size = 24
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_rbm2p")
texture_pressed = ExtResource("4_dri2l")
texture_hover = ExtResource("4_dri2l")

[node name="Label" type="Label" parent="UI/VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_wti6s")
theme_override_font_sizes/font_size = 24
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fk3a5")

[connection signal="pressed" from="UI/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
